Fix media player background-color dark mode view

--- a/src/components/DarkMode/DarkMode.scss
+++ b/src/components/DarkMode/DarkMode.scss
@@ -90,6 +90,10 @@ $color: red;
   }
 }
 
+.media-player {
+  background-color: $dark-1;
+}
+
 /*
 .about__heading {
   @include mdc-typography(headline4);
